# marshmallow-peewee

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .travis.yml  .vimrc  AUTHORS.rst  CONTRIBUTING.rst  Changelog  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  release.yml  tests.yml
marshmallow_peewee/: __init__.py  _compact.py  _compat.py  compat.py  config.py  convert.py  fields.py  opts.py  schema.py  types.py
requirements/: requirements-tests.txt  requirements.txt
tests/: conftest.py  models.py  test_base.py  test_convert.py  test_fields.py  test_marshmallow2.py  test_marshmallow3.py  test_meta.py  test_schema.py
