[wheel]
universal = 1

[metadata]
name = Marshmallow-Peewee
version = attr: marshmallow_peewee.__version__
url = https://github.com/klen/marshmallow-peewee
description = Peewee integration with the Marshmallow (de)serialization library.
long_description = file: README.md
long_description_content_type = text/markdown
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = peewee, marshmallow, serialization, deserialization
project_urls = 
    Documentation = https://github.com/klen/marshmallow-peewee
    Source code = https://github.com/klen/marshmallow-peewee
    Issue tracker = https://github.com/klen/marshmallow-peewee/issues
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = marshmallow_peewee,
python_requires = >=3.7
install_requires = 
    peewee > 3
    marshmallow > 3

[options.package_data]
marshmallow_peewee = 
    py.typed

[options.extras_require]
tests = 
    pytest
    pytest-cov
    pytest-mypy
    pytest-sugar

[tool:pytest]
addopts = -xsv --mypy

[mypy]
ignore_missing_imports = True

[pylama]
ignore = D
linters = pep8,pyflakes,mccabe

[pylama:pep8]
max_line_length=100

[pylama:tests/*]
ignore = D,W,R

[tox:tox]
envlist = py37,py38,py39

[testenv]
deps = -e .[tests]
commands = 
    pytest tests
